# libxgwx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
examples/: bench.rs  gui.rs  inspect.rs  tui.rs
fixtures/: README.md  XGB_Enet01.xgwx  XGB_Enet02.xgwx  elements.xgwx
src/: document.rs  error.rs  lib.rs  mnemonic.rs  model.rs  tests.rs
src/internal/: container.rs  ladder.rs  mod.rs  parameters.rs  payload.rs
src/wasm/: ladder.rs  mod.rs  network.rs  parameters.rs  project.rs
web/: app.js  index.html  styles.css
